src/objects/ContractSpecialists__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CellPhone__c</fullName>
        <label>CellPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contract Specialists</relationshipLabel>
        <relationshipName>Contract_Specialists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Facilities__c</fullName>
        <label>Facilities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regional Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract Specialists</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>Facilities__c</columns>
        <columns>Email__c</columns>
        <columns>CellPhone__c</columns>
        <columns>Contact__c</columns>
        <columns>Division__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SpecialistsId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Specialists</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>